Revert "fix nav button 1px too low"
This reverts commit 64964bc94a847ba180923a6decd6e0faa95ed72d.

--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ nav li.active a {
         position: fixed;
         display: block;
         right: 0;
-        top: 59px;
+        top: 60px;
         z-index: 2;
         height: 100%;
         width: 40px;
